<resources>
    <string name="app_name">BookStoreApp</string>
    <string name="buy">BUY</string>
    <string name="SoldOut">Sold Out</string>
    <string name="Stock">\u0020\u0020\u0020\u0020\u0020\u0020Stock left:\u0020\u0020</string>
    <string name="_dollar">$</string>
    <string name="AddBook">Add a Book</string>
    <string name="EditBook">Edit Book</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successful">Book saved!</string>
    <string name="editor_update_book_failed">Update book failed</string>
    <string name="editor_update_book_successful">Book edited successful</string>
    <string name="EnterDetails">Enter All Details</string>
    <string name="NoNegative">No Negative Stock Allowed</string>
    <string name="tel">tel:</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="Discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="FailedDelete">Delete failed</string>
    <string name="BookDeleted">Book Deleted</string>
    <string name="book">Book</string>
    <string name="Name">Name</string>
    <string name="price">Price</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="name">Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="phone">Phone</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="order">order</string>
    <string name="save">Save</string>
    <string name="delete_book">Delete Book</string>
    <string name="delete_all_books">Delete All Books</string>
    <string name="supplier_details">Supplier details</string>
    <string name="zeroPrice">Price cannot be 0</string>
    <string name="default_image_when_empty">Default Image when no books in store</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="it_is_quite_empty_here">It is quite empty here</string>
    <string name="quantity">Quantity</string>
</resources>